@@ -3,7 +3,6 @@ package core.fu4sbackend.service;
 import core.fu4sbackend.dto.QuestionSetDto;
 import core.fu4sbackend.entity.QuestionSet;
 import core.fu4sbackend.repository.QuestionSetRepository;
-import org.json.JSONArray;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.modelmapper.ModelMapper;
@@ -15,7 +14,7 @@ import java.util.stream.Collectors;
 @Service
 public class QuestionSetService {
 
-    private final QuestionSetRepository questionSetRepository;
+    private QuestionSetRepository questionSetRepository;
 
     @Autowired
     public QuestionSetService(QuestionSetRepository questionSetRepository) {
@@ -30,7 +29,7 @@ public class QuestionSetService {
     }
     public List<QuestionSetDto> getAllQuestionSets() {
         List<QuestionSet> questionSets = questionSetRepository.findAll();
-        List<QuestionSetDto> questionSetDtos;
+        List<QuestionSetDto> questionSetDtos = new ArrayList<>();
 
         ModelMapper modelMapper = new ModelMapper();
         questionSetDtos = questionSets
@@ -39,29 +38,17 @@ public class QuestionSetService {
                     QuestionSetDto questionSetDto =  modelMapper.map(questionSet, QuestionSetDto.class);
                     questionSetDto.setUsername(questionSet.getUser().getFirstName()+" "+questionSet.getUser().getLastName());
 
-
                     return questionSetDto ;
                 })
 
-
                 .collect(Collectors.toList());
-
 
         return questionSetDtos;
     }
-    public List<QuestionSetDto> findByKeyword(String keyword) {
-        List<QuestionSet> questionSets = questionSetRepository.findByKeyword(keyword);
-        List<QuestionSetDto> questionSetDtos;
-
+    public List<QuestionSetDto> getQuestionSetsByUsername(String username) {
         ModelMapper modelMapper = new ModelMapper();
-        questionSetDtos = questionSets
-                .stream()
-                .map(questionSet -> {
-                    QuestionSetDto questionSetDto =  modelMapper.map(questionSet, QuestionSetDto.class);
-                    questionSetDto.setUsername(questionSet.getUser().getFirstName()+" "+questionSet.getUser().getLastName());
-                    return questionSetDto ;
-                })
-                .collect(Collectors.toList());
-        return questionSetDtos;
+        return questionSetRepository.getAllByUsername(username)
+                .stream().map(questionSet -> modelMapper.map(questionSet, QuestionSetDto.class))
+                .toList();
     }
 }
